<?xml version="1.0"?>
<package format="3">
  <name>aruco_detector</name>
  <version>0.0.1</version>
  <description>ArUco marker 検出</description>
  <maintainer email="your@email.com">yuzuki</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>libopencv-dev</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
